@@ -86,25 +86,45 @@ $lang['clean'] = 'Clean';
 $lang['disk_action_title_idle'] = "Recovering RAID array";
 
 // Network
+$lang['wlan_title'] = 'Wireless';
+$lang['wlan_title_ssid'] = 'Network name (SSID)';
+$lang['wlan_title_ssid_popup'] = 'The network name is used to connect to the Bubba|TWO via a wireless network, often called SSID';
+$lang['wlan_title_enable'] = 'Enable wireless';
+$lang['wlan_title_enable_popup'] = 'Check this checkbox to enable wireless functionallity for your Bubba|TWO';
+
+$lang['wlan_title_advanced'] = 'Advanced wireless settings';
+
+$lang['wlan_title_band'] = 'Band';
 $lang['wlan_title_band_1'] = '2.4GHz band used by 802.11g';
 $lang['wlan_title_band_2'] = '5GHz band used by 802.11a';
 
+$lang['wlan_title_mode'] = 'Mode';
+$lang['wlan_title_mode_popup'] = 'The operation mode for selected band';
 $lang['wlan_title_legacy_mode_2'] = 'Legacy mode (802.11a)';
 $lang['wlan_title_legacy_mode_1'] = 'Legacy mode (802.11g)';
 $lang['wlan_title_mixed_mode_2'] = 'Mixed mode (802.11n + 802.11a)';
 $lang['wlan_title_mixed_mode_1'] = 'Mixed mode (802.11n + 802.11g)';
 $lang['wlan_title_greenfield_mode'] = 'Greenfield mode (802.11n only)';
 
+$lang['wlan_title_encryption'] = 'Encryption';
+$lang['wlan_title_encryption_popup'] = 'The encryption to use';
 $lang['wlan_title_encryption_wpa2'] = 'WPA2';
 $lang['wlan_title_encryption_wpa12'] = 'WPA1 or WPA2';
 $lang['wlan_title_encryption_wpa1'] = 'WPA1';
 $lang['wlan_title_encryption_wep'] = 'WEP';
 $lang['wlan_title_encryption_none'] = 'None';
 
+$lang['wlan_title_width'] = 'Channel width';
+$lang['wlan_title_width_popup'] = 'The targeted width of the channel in MHz';
 $lang['wlan_title_width_20MHz'] = '20MHz';
 $lang['wlan_title_width_40MHz'] = '40MHz';
 
-$lang['wlan_pw_label_encryption'] = 'Passphrase';
+$lang['wlan_title_password'] = 'Password';
+$lang['wlan_title_password_popup'] = 'The WEP or WPA password that should be required to connect to the AP';
 
-$lang['wlan_title_channel'] = 'Channel %d';
+$lang['wlan_title_channel'] = 'Channel';
+$lang['wlan_title_channel_popup'] = 'The main channel to use';
+
+$lang['wlan_title_broadcast'] = 'Broadcast SSID';
+$lang['wlan_title_broadcast_popup'] = 'Whenever to broadcast the SSID';
 ?>
