@@ -1,10 +1,38 @@
-<fieldset><legend><i><?=t('wLAN')?></i></legend>
-<form id="wLANCFG" action="<?=FORMPREFIX?>/network/wlanupdate" method="post">
+<fieldset><legend><i><?=t('wlan_title')?></i></legend>
+<form 
+	id="wLANCFG" 
+	action="<?=FORMPREFIX?>/network/wlanupdate" 
+	method="post"
+>
 <table class="networksettings">
 <tr>
-	<td><label for="ssid"><?=t("SSID")?></label></td>
-	<td><input disabled="disabled" type="text" name="ssid" id="ssid" value="<?=$ssid?>"/></td>
+	<td><label for="enabled"><?=t("wlan_title_enable")?></label></td>
+	<td>
+		<input 
+			disabled="disabled" 
+			type="checkbox" 
+			name="enabled" 
+			id="enabled" 
+			title="<?=t("wlan_title_enable_popup")?>"
+			<?if($enabled):?>checked="checked"<?endif?>
+		/>
+	</td>
 </tr>
+
+<tr>
+	<td><label for="ssid"><?=t("wlan_title_ssid")?></label></td>
+	<td>
+		<input 
+			disabled="disabled" 
+			type="text" 
+			name="ssid" 
+			id="ssid" 
+			title="<?=t("wlan_title_ssid_popup")?>"
+			value="<?=$ssid?>"
+		/>
+	</td>
+</tr>
+
 <tr>
 	<td>
 	<label 
@@ -12,7 +40,7 @@
 		class="passwordlabel" 
 		id="passwordlabel"
 	>
-		<?=t("wlan_pw_label_encryption")?>
+		<?=t("wlan_title_password")?>
 	</label>
 	</td>
 	<td>
@@ -21,23 +49,22 @@
 		class="password"
 		name="password" 
 		id="password" 
+		title="<?=t("wlan_title_password_popup")?>"
 		value="<?=htmlentities($encryption_key)?>"
 	/>
 	</td>
 </tr>
-<tr>
-	<td><label for="enabled"><?=t("Enabled")?></label></td>
-	<td><input disabled="disabled" type="checkbox" name="enabled" id="enabled" <?if($enabled):?>checked="checked"<?endif?>/></td>
-</tr>
+
 </table>
 
 <fieldset class="expandable collapsed">
-<legend><i><?=t("Advanced")?></i></legend>
+<legend><i><?=t("wlan_title_advanced")?></i></legend>
 <div>
 
 <table class="networksettings">
+
 <tr>
-	<td><label for="band"><?=t("Band")?></label></td>
+	<td><label for="band"><?=t("wlan_title_band")?></label></td>
 	<td>
 	<input 
 		type="radio" 
@@ -62,35 +89,49 @@
 	<label for="band2" title="<?=t("wlan_title_band_5_0")?>">5GHz</label>
 	</td>
 </tr>
+
 <tr>
-	<td><label for="mode"><?=t("Mode")?></label></td>
+	<td><label for="mode"><?=t("wlan_title_mode")?></label></td>
 	<td>
 	<select
 		disabled="disabled"
 		id="mode"
 		name="mode"
-		title="<?=t("The operation mode for selected band")?>"
+		title="<?=t("wlan_title_mode_popup")?>"
 	>
-		<option id="mode_legacy" value="legacy" <?if($current_mode == "legacy"):?>selected="selected"<?endif?>>
+		<option 
+			id="mode_legacy" 
+			value="legacy" 
+			<?if($current_mode == "legacy"):?>selected="selected"<?endif?>
+		>
 			<?=t("wlan_title_legacy_mode_$current_band")?>
 		</option>
-		<option id="mode_mixed" value="mixed" <?if($current_mode == "mixed"):?>selected="selected"<?endif?>>
+		<option 
+			id="mode_mixed" 
+			value="mixed" 
+			<?if($current_mode == "mixed"):?>selected="selected"<?endif?>
+		>
 			<?=t("wlan_title_mixed_mode_$current_band")?>
 		</option>
-		<option id="mode_greenfield" value="greenfield" <?if($current_mode == "greenfield"):?>selected="selected"<?endif?>>
+		<option 
+			id="mode_greenfield" 
+			value="greenfield" 
+			<?if($current_mode == "greenfield"):?>selected="selected"<?endif?>
+		>
 			<?=t("wlan_title_greenfield_mode")?>
 		</option>
 	</select>
 	</td>
 </tr>
+
 <tr>
-	<td><label for="width"><?=t("Channel width")?></label></td>
+	<td><label for="width"><?=t("wlan_title_width")?></label></td>
 	<td>
 	<select
 		disabled="disabled"
 		id="width"
 		name="width"
-		title="<?=t("The targeted width of the channel in MHz")?>"
+		title="<?=t("wlan_title_width_popup")?>"
 	>
 		<option id="width_20MHz" value="20" <?if($current_width == "20"):?>selected="selected"<?endif?>>
 			<?=t("wlan_title_width_20MHz")?>
@@ -101,9 +142,10 @@
 	</select>
 	</td>
 </tr>
+
 <tr>
-	<td><label for="encryption"><?=t("Encryption")?></label></td>
-	<td><select disabled="disabled" id="encryption" name="encryption" title="<?=t("The encryption to use")?>">
+	<td><label for="encryption"><?=t("wlan_title_encryption")?></label></td>
+	<td><select disabled="disabled" id="encryption" name="encryption" title="<?=t("wlan_title_encryption_popup")?>">
 <?foreach($encryptions as $encryption):?>
 	<option value="<?=$encryption?>" <?if($encryption == $current_encryption):?>selected="selected"<?endif?>><?=t("wlan_title_encryption_$encryption")?></option>
 <?endforeach?>
@@ -112,20 +154,21 @@
 </tr>
 
 <tr>
-	<td><label for="channel"><?=t("Channel")?></label></td>
+	<td><label for="channel"><?=t("wlan_title_channel")?></label></td>
     <td>
-	<select disabled="disabled" id="channel" name="channel" title="<?=t("The channel to use")?>">
+	<select disabled="disabled" id="channel" name="channel" title="<?=t("wlan_title_channel_popup")?>">
     </select>
 	</td>
 </tr>
+
 <tr>
-	<td><label for="broadcast_ssid"><?=t("Broadcast SSID")?></label></td>
+	<td><label for="broadcast_ssid"><?=t("wlan_title_broadcast")?></label></td>
     <td>
     <input
         disabled="disabled"
         id="broadcast_ssid"
         name="broadcast_ssid"
-        title="<?=t("Whenever to broadcast the SSID")?>"
+        title="<?=t("wlan_title_broadcast_popup")?>"
         type="checkbox"
         <?if($broadcast_ssid):?>checked="checked"<?endif?>
     />
@@ -137,7 +180,12 @@
 </div>
 </fieldset>
 
-<input disabled="disabled" type="submit" value='<?=t('Update')?>' name='update'/>
+<input
+	disabled="disabled"
+	type="submit"
+	value='<?=t('Update')?>'
+	name='update'
+/>
 
 </form>
 </fieldset>
